# BambUI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
.github/workflows/: main.yaml
backend/: api.py  asyncCameraClient.py  bot.py  main.py  printer_payload.py  printer_ws.py  printers.py  types_general.py  types_printer.py
frontend/: app.css  typesApi.ts
frontend/lib/: Navbar.svelte  Printer.svelte  utils.ts
frontend/lib/components/ui/ams/: AmsStatus.svelte  index.ts
frontend/lib/components/ui/badge/: badge.svelte  index.ts
frontend/lib/components/ui/popover/: index.ts  popover-content.svelte
public/: manifest.json  sw.js
