[project]
name = "bambui"
version = "0.1.0"
description = ""
authors = [{ name = "fidoriel", email = "49869342+fidoriel@users.noreply.github.com" }]
requires-python = "~=3.12"
readme = "README.md"
license = "AGPL"
dependencies = [
    "bambu-connect>=0.3.1,<0.4",
    "python-dotenv>=1.0.1,<2",
    "fastapi>=0.115.6,<0.116",
    "uvicorn[standard]>=0.34.0,<0.35",
    "bambulabs-api>=2.5.2,<3",
    "aiomqtt>=2.3.0,<3",
    "aioftp>=0.24.1,<0.25",
    "ping3>=4.0.8,<5",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4,<0.9",
    "mypy>=1.14.0,<2",
]

[tool.hatch.build.targets.sdist]
include = ["backend"]

[tool.hatch.build.targets.wheel]
include = ["backend"]

[[tool.mypy.overrides]]
module = ["bambu_connect.*", "aioftp.*", "ping3"]
ignore_missing_imports = true
